# canopy

./: .gitignore  README.md  canopy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
agent/: README.md  pyproject.toml
agent/src/canopy_agent/: __init__.py  runtime.py
catalog/: README.md  catalog.json
docs/: README.md  archetypes.md  domain-model.md  manager-responsibilities.md  org-chart-editor.md  phases.md  roles.md  teams.md  use-cases.md
scripts/: loadtest_gateway.py
server/: README.md  pyproject.toml
server/src/canopy_server/: __init__.py  activity.py  actuator.py  artifacts.py  bus.py  catalog.py  charter.py  config.py  db.py  deps.py  devkit.py  directory.py  ids.py  ledger.py  main.py  migrate.py  models.py  profiles.py  registry.py  reid.py  router.py  runtokens.py  secretstore.py  seeds.py  sqlite_store.py  store.py
server/src/canopy_server/engine/: __init__.py  engine.py  models.py  store.py
server/src/canopy_server/gateway/: __init__.py  base.py  providers.py  service.py
server/src/canopy_server/routes/: actuations.py  catalog.py  dp.py  health.py  operations.py  organizations.py  profiles.py  work.py
server/src/canopy_server/sandbox/: __init__.py  base.py  subprocess_sandbox.py
server/src/canopy_server/validation/: __init__.py  codes.py  rules.py
server/tests/: conftest.py  test_actuation_api.py  test_actuator.py  test_artifacts.py  test_bus.py  test_catalog.py  test_contracts.py  test_directory.py  test_engine.py  test_gateway.py  test_ledger.py  test_loop_runtime.py  test_nested.py  test_persistence.py  test_profiles_api.py  test_router.py  test_routes.py  test_sandbox.py  test_secretstore.py  test_seeds.py  test_store.py  test_validation.py  test_work_api.py  test_work_store.py
ui/: index.html  package.json  vite.config.ts
(+138 files in other folders)
