[project]
name = "canopy-agent"
version = "0.1.0"
description = "Canopy agent runtime — the generic per-node process (Phase 2)."
readme = "README.md"
requires-python = ">=3.11"
# Deliberately tiny. The runtime is a thin shell: all intelligence goes through the Model Gateway,
# all communication through the Router, all outputs through the Artifact Store — over HTTP. It
# never imports canopy_server. This is the microservice-packaging seam (agent-runtime.md §7):
# a Dockerfile around `pip install canopy-agent` + the env contract is the standalone agent image.
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canopy_agent"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
